--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li> <i class="fas fa-check"></i> 2 Website </li>
                     <li> <i class="fas fa-check"></i> 2GB SSD </li>
                     <li> <i class="fas fa-check"></i> Limited Bandwith (100GB)</li>
-                    <li> <i class="fas fa-check"></i> Upto 5 E-mail Accoun</li>
+                    <li> <i class="fas fa-check"></i> 5 E-mail Accoun</li>
                     <li> <i class="fas fa-times"></i> 24/7 Support </li>
                     <li> <i class="fas fa-times"></i> Free SSL Certificate </li>
                     <li> <i class="fas fa-times"></i> Free Domain </li>
